# controller/User.go
@@ -10,7 +10,7 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary Get Profile
+// @Summary API SERVICE
 // @Description Profile Meta User
 // @Accept  json
 // @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
@@ -28,96 +28,34 @@ func UserGetProfiles(context *gin.Context) { // Get model if exist
 	helper.Metauser(context, user.Id)
 }
 
-// @Summary User Assign Role
-// @Description User Assign Role User
+// @Summary Employee Add New
+// @Description Employee Create New
 // @Accept  json
 // @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
-// @Param ID  path      string  true  "Assign User By ID"
-// @Param Register body schema.AssignUserRole true "Assign User Schema "
+// @Param Register body schema.JsonEmployeeCreate true "Employee Add New Schema "
 // @Produce  json
 // @Success 200 {object} schema.MsgResponse
-// @Router /user/:ID/assign_roles [get]
-func UserAssignRole(context *gin.Context) {
-	id := context.Param("ID")
-	var input schema.AssignUserRole
-
+// @Router /user/employee [post]
+func EmployeeAddNew(context *gin.Context) {
+	var input schema.JsonEmployeeCreate
 	if err := context.ShouldBindJSON(&input); err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-
-	input_roles := input.Role
-	data_roles, err := model.FindRoleMapByName(input_roles)
+	userID, _ := helper.GenerateUserId(3)
+	employeeId, _ := helper.GenerateProfileId(3)
+	data_roles, err := model.FindRoleMapByName(input.Roles)
 	if err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+
 	roleMap := []schema.Role{}
 	for _, element := range data_roles {
 		roleMap = append(roleMap, schema.Role{Id: element.Id})
 	}
-	users, err := model.UserFindById(id)
-	if err != nil {
-		context.JSON(http.StatusNotFound, gin.H{"msg": "User Not Found"})
-		return
-	}
-	updateRoles, err := users.UserAssignRoles(id, roleMap)
-	fmt.Println(updateRoles)
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	context.JSON(http.StatusCreated, schema.MsgResponse{Msg: "Assign Completed"})
-}
 
-func UserAssignRoleApplication(context *gin.Context) { // Get model if exist
-	id := context.Param("ID")
-	var input schema.AssignRoleApplication
-
-	if err := context.ShouldBindJSON(&input); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	input_role_application := input.RoleApplication
-	data_roles, err := model.RoleAppMapByName(input_role_application)
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	roleMap := []schema.RoleApplication{}
-	for _, element := range data_roles {
-		roleMap = append(roleMap, schema.RoleApplication{Id: element.Id})
-	}
-	accounts, err := model.AccountFindById(id, true)
-	if err != nil {
-		context.JSON(http.StatusNotFound, gin.H{"msg": "User Not Found"})
-		return
-	}
-	updateRoleApplication, err := accounts.AccountSignRoleApp(accounts.Id, roleMap)
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	users, err := model.UserFindById(updateRoleApplication.UserId)
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	context.JSON(http.StatusCreated, gin.H{"user": users})
-}
-
-func UserAssignDivisions(context *gin.Context) {
-	id := context.Param("ID")
-	var input schema.AddUserDivision
-
-	if err := context.ShouldBindJSON(&input); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	input_division := input.Division
-	data_divisions, err := model.DivisonFindMapById(input_division)
+	data_divisions, err := model.DivisonFindMapById(input.Divisions)
 	if err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -126,95 +64,182 @@ func UserAssignDivisions(context *gin.Context) {
 	for _, element := range data_divisions {
 		divisionMap = append(divisionMap, schema.Division{Id: element.Id})
 	}
-	users, err := model.UserFindById(id)
-	if err != nil {
-		context.JSON(http.StatusNotFound, gin.H{"msg": "User Not Found"})
-		return
+	user := model.User{
+		Id:        userID,
+		Code:      input.Code,
+		Roles:     roleMap,
+		Email:     input.Email,
+		Divisions: divisionMap,
+		Username:  input.Username,
+		Password:  input.Password,
 	}
-	if err != nil {
-		context.JSON(http.StatusNotFound, gin.H{"msg": "User Not Found"})
-		return
-	}
-	updateDivision, err := users.UserAssignDivision(id, divisionMap)
+	savedUser, err := user.Save()
 	if err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	context.JSON(http.StatusCreated, gin.H{"user": updateDivision})
+	data_apps, err := model.AppsFindMapById(input.Application)
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	for _, element := range data_apps {
+		accountId, _ := helper.GenerateAccountId(3)
+		divisionMap = append(divisionMap, schema.Division{Id: element.Id})
+		data_role_app, err := model.RoleAppMapByName(input.RoleApplication)
+		if err != nil {
+			context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		roleAppMap := []schema.RoleApplication{}
+		for _, element := range data_role_app {
+			roleAppMap = append(roleAppMap, schema.RoleApplication{Id: element.Id})
+		}
+		account := model.Account{
+			Id:               accountId,
+			UserId:           savedUser.Id,
+			ApplicationId:    element.Id,
+			RoleApplications: roleAppMap,
+		}
+		savedAccount, err := account.Save()
+		fmt.Println(savedAccount)
+		if err != nil {
+			context.JSON(http.StatusBadRequest, schema.MsgResponse{Msg: err.Error()})
+			return
+		}
+	}
+
+	emp := model.Employee{
+		Id:           employeeId,
+		Code:         input.Code,
+		Email:        input.Email,
+		Username:     input.Username,
+		Nik:          input.Nik,
+		NickName:     input.NickName,
+		FullName:     input.FullName,
+		Picture:      input.Picture,
+		PhoneNumber:  input.PhoneNumber,
+		Address:      input.Address,
+		CompanyId:    input.CompanyId,
+		Department:   input.Department,
+		OfficeNumber: input.OfficeNumber,
+		UserId:       savedUser.Id}
+
+	saveEmployee, err := emp.Save()
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	}
+	fmt.Println(saveEmployee)
+	context.JSON(http.StatusCreated, schema.MsgResponse{Msg: "Employee Created"})
 }
 
-func UserAccountUpdate(context *gin.Context) {
-	// Get model if exist
+// @Summary Employee Add New
+// @Description Employee Create New
+// @Accept  json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param Register body schema.JsonEmployeeCreate true "Employee Add New Schema "
+// @Produce  json
+// @Success 200 {object} schema.MsgResponse
+// @Router /user/employee [post]
+func EmployeeUpdate(context *gin.Context) {
 	id := context.Param("ID")
-	data_entries, err := model.AccountFindById(id, true)
+	getData, err := model.EmployeeFindById(id)
 	if err != nil {
-		context.JSON(http.StatusNotFound, gin.H{"error": "Record not found!"})
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-
-	// Validate input
-	var input model.UpdateAccount
+	var input schema.JsonEmployeeCreate
 	if err := context.ShouldBindJSON(&input); err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-
-	updatedEntry, err := data_entries.AccountChangeData(id, input)
+	userID := getData.UserId
+	employeeId := getData.Id
+	data_roles, err := model.FindRoleMapByName(input.Roles)
 	if err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	context.JSON(http.StatusOK, gin.H{"data": updatedEntry})
-}
-
-func EmployeeAddNew(context *gin.Context) {
-	var input schema.Register
-	if err := context.ShouldBindJSON(&input); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	input_roles := input.Role
-	data_roles, err := model.FindRoleMapByName(input_roles)
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	userID, _ := helper.GenerateUserId(3)
-	profileId, _ := helper.GenerateProfileId(3)
 
 	roleMap := []schema.Role{}
 	for _, element := range data_roles {
 		roleMap = append(roleMap, schema.Role{Id: element.Id})
 	}
 
-	user := model.User{
-		Id:       userID,
-		Roles:    roleMap,
-		Email:    input.Email,
-		Username: input.Username,
-		Password: input.Password,
-	}
-
-	savedUser, err := user.Save()
-
+	data_divisions, err := model.DivisonFindMapById(input.Divisions)
 	if err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
+	}
+	divisionMap := []schema.Division{}
+	for _, element := range data_divisions {
+		divisionMap = append(divisionMap, schema.Division{Id: element.Id})
+	}
+	user := model.User{
+		Id:        userID,
+		Code:      input.Code,
+		Roles:     roleMap,
+		Email:     input.Email,
+		Divisions: divisionMap,
+		Username:  input.Username,
+		Password:  input.Password,
+	}
+	savedUser, err := user.Save()
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	data_apps, err := model.AppsFindMapById(input.Application)
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	for _, element := range data_apps {
+		accountId, _ := helper.GenerateAccountId(3)
+		divisionMap = append(divisionMap, schema.Division{Id: element.Id})
+		data_role_app, err := model.RoleAppMapByName(input.RoleApplication)
+		if err != nil {
+			context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		roleAppMap := []schema.RoleApplication{}
+		for _, element := range data_role_app {
+			roleAppMap = append(roleAppMap, schema.RoleApplication{Id: element.Id})
+		}
+		account := model.Account{
+			Id:               accountId,
+			UserId:           savedUser.Id,
+			ApplicationId:    element.Id,
+			RoleApplications: roleAppMap,
+		}
+		savedAccount, err := account.Save()
+		fmt.Println(savedAccount)
+		if err != nil {
+			context.JSON(http.StatusBadRequest, schema.MsgResponse{Msg: err.Error()})
+			return
+		}
 	}
 
 	emp := model.Employee{
-		Id:        profileId,
-		Username:  input.Username,
-		Email:     input.Email,
-		UserId:    savedUser.Id,
-		CompanyId: input.CompanyId}
+		Id:           employeeId,
+		Code:         input.Code,
+		Email:        input.Email,
+		Username:     input.Username,
+		Nik:          input.Nik,
+		NickName:     input.NickName,
+		FullName:     input.FullName,
+		Picture:      input.Picture,
+		PhoneNumber:  input.PhoneNumber,
+		Address:      input.Address,
+		CompanyId:    input.CompanyId,
+		Department:   input.Department,
+		OfficeNumber: input.OfficeNumber,
+		UserId:       savedUser.Id}
 
-	savedProfile, err := emp.Save()
+	saveEmployee, err := emp.Save()
 	if err != nil {
 		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
 	}
-	fmt.Println(savedProfile)
-	fmt.Println(savedUser)
-	context.JSON(http.StatusCreated, schema.MsgResponse{Msg: "Register Completed"})
+	fmt.Println(saveEmployee)
+	context.JSON(http.StatusCreated, schema.MsgResponse{Msg: "Employee Created"})
 }
