# docs/api_swagger.json
@@ -23,7 +23,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get Profile",
+                "summary": "API SERVICE",
                 "parameters": [
                     {
                         "type": "string",
@@ -96,6 +96,45 @@
                     }
                 }
             }
+        },
+        "/user/employee": {
+            "post": {
+                "description": "Employee Create New",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Employee Add New",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Employee Add New Schema ",
+                        "name": "Register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.JsonEmployeeCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.MsgResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -107,6 +146,93 @@
                     "items": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "schema.JsonEmployeeCreate": {
+            "type": "object",
+            "required": [
+                "address",
+                "application",
+                "code",
+                "company_id",
+                "department",
+                "division",
+                "email",
+                "fullname",
+                "nickname",
+                "nik",
+                "office_number",
+                "password",
+                "phone_number",
+                "picture",
+                "role",
+                "role_application",
+                "username"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "application": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "code": {
+                    "type": "string"
+                },
+                "company_id": {
+                    "type": "string"
+                },
+                "department": {
+                    "type": "string"
+                },
+                "division": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "email": {
+                    "type": "string"
+                },
+                "fullname": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "nik": {
+                    "type": "string"
+                },
+                "office_number": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "picture": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "role_application": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
