# schema/Meta.go
@@ -121,11 +121,3 @@ type MetaGang struct {
 	Code string
 	Name string
 }
-
-type LoginResponse struct {
-	Token string
-}
-
-type MsgResponse struct {
-	Msg string
-}
