# schema/Response.go
@@ -1,0 +1,9 @@
+package schema
+
+type LoginResponse struct {
+	Token string
+}
+
+type MsgResponse struct {
+	Msg string
+}
